@@ -33,6 +33,7 @@
  * #1354 (The doc of GeneralizedParetoFactory does not reflect the implementation)
  * #1371 (Memory leak in ot.TruncatedDistribution)
  * #1378 (Kriging-related covariance model weirdness)
+ * #1384 (The ExprTk engine is not case-sensitive)
  * #1388 (Kolmogorov fails on a PythonDistribution)
 
 == 1.14 release (2019-11-13) == #release-1.14
